--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 SERVER_PORT=
 CORS_ORIGIN=
-MONGODB_PATH=mongodb://localhost:27017/todo
+MONGODB_PATH=mongodb+srv://useai:admin@project.txxtf9r.mongodb.net/
